# snake

./: CMakeLists.txt  README.md
include/: color.hpp  game.hpp  snake.hpp  util.hpp
src/: game.cpp  main.cpp  snake.cpp  util.cpp
